[project]
name = "langgraph-factory"
version = "0.1.0"
description = "LangGraph pipelines for generating Next.js projects from natural-language specs"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["langgraph_factory*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true
